# ak_lab4

./: .gitignore  README.md  interpreter.py  pyproject.toml  translator.py
.github/workflows/: ci.yml
lang/: exceptions.py  formatter.py  isa.py  lang_type.py  lexer.py  machine.py  pipeline.py  runtime.py
lang/compiler/: __init__.py  bytecode.py  inferrer.py  memory.py
lang/parser/: __init__.py  base_token.py  builtin_symbols.py  cps.py  extend_class.py  find_builtin_symbol.py  qualname.py  qualname_assign.py  s_expr.py  step_01_build_tree.py  step_02_analyze_s_expr.py  step_03_cps.py  step_04_assign_qualnames.py  step_05_assign_captures.py  token_storage.py  tree.py
lang/stdlib/: __init__.py  doubles.py  floats.py  integers.py  io.py  logic.py  strings.py
tests/: README.md  __init__.py  test_golden.py  test_machine.py
tests/cases/: _seed.py
tests/cases/arithmetic/: addition_three_args.bin.txt  addition_three_args.json  addition_three_args.lisp  addition_three_args.log.txt  division.bin.txt  division.lisp  division.log.txt  modulo.bin.txt  modulo.json  modulo.lisp  modulo.log.txt  multiplication.bin.txt  multiplication.log.txt  nested.bin.txt  nested.lisp  nested.log.txt  simple_addition.json  simple_addition.log.txt  subtraction.bin.txt  subtraction.json  subtraction.log.txt
tests/cases/autoboxing/: mutable_captured_by_lambda.bin.txt  mutable_captured_by_lambda.json  mutable_captured_by_lambda.lisp  mutable_captured_by_lambda.log.txt
tests/cases/comparison/: eq_false.bin.txt  eq_false.json  eq_false.lisp  eq_false.log.txt  eq_true.bin.txt  eq_true.lisp  (+8 more)
(+173 files in other folders)
