[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nika"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
]
ignore = [
    "E501", # длинные строки иногда используются в комметнариях/логах/ошибках
    "UP046", # ковариантность с self не работает с синтаксисом "class name[T]"
]

[tool.ruff.lint.isort]
known-first-party = ["lang", "tests"]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
